tests/NormalTests/paczka1/fuzzy1/63803360.err
Error in line 4: 0bBM3jIJ6y A509 59,2
Error in line 18: UekQEK A872 73,5
Error in line 27: 9WW7Gs A887 -5,0
Error in line 23: UekQEK A887 81,4
Error in line 29: 0bBM3jIJ6y A872 32,9
Error in line 36: VEKUi A887 48,1
